2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Unity/gtk-2.0/gtkrc:
	I like these new colors for the notebook

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Unity/gtk-2.0/gtkrc:
	Less bright notebook

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Unity/gtk-2.0/gtkrc:
	Better code

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Unity/gtk-2.0/gtkrc:
	Removed useless code

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* desktop-themes/Unity/Makefile.am:
	* gtk-themes/Unity/gtk-2.0/gtkrc:
	I broke Darklooks's metatheme, now fixed

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Unity/gtk-2.0/gtkrc:
	More radius

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* desktop-themes/Unity/index.theme.in:
	Fixed desktop metatheme

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	gnome-themes-extras depends on gtk-engines 2.14.0 (gnome 2.22.0)

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* COPYING:
	GNOME_alternative is now gnome-alternative

2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* desktop-themes/Unity/Makefile.in:
	* desktop-themes/Unity/index.theme.ine:
	* desktop-themes/Unity/index.themee:
	* gtk-themes/Unity/Makefile.in:
	* gtk-themes/Unity/gtk-2.0/Makefile.in:
	* icon-themes/gnome-alternative/16x16/Makefile.in:
	* icon-themes/gnome-alternative/16x16/actions/Makefile.in:
	* icon-themes/gnome-alternative/16x16/places/Makefile.in:
	* icon-themes/gnome-alternative/16x16/status/Makefile.in:
	* icon-themes/gnome-alternative/22x22/Makefile.in:
	* icon-themes/gnome-alternative/22x22/actions/Makefile.in:
	* icon-themes/gnome-alternative/22x22/places/Makefile.in:
	* icon-themes/gnome-alternative/22x22/status/Makefile.in:
	* icon-themes/gnome-alternative/24x24/Makefile.in:
	* icon-themes/gnome-alternative/24x24/actions/Makefile.in: