@@ -128,7 +128,7 @@ style "clearlooks-menu"
 	xthickness = 0
 	ythickness = 0
 
-	bg[NORMAL] = shade (1.08, @bg_color)
+	bg[NORMAL] = shade (1.09, @bg_color)
 
 	# Radius of the menu items (inside menus)
 	engine "clearlooks" 
@@ -159,8 +159,6 @@ style "clearlooks-separator-menu-item"
 
 style "clearlooks-treeview"
 {
-	bg[NORMAL]   = shade (1.07, @bg_color)
-
 	engine "clearlooks" {
 		hint = "treeview"
 	}
@@ -172,6 +170,8 @@ style "clearlooks-treeview-header" = "clearlooks-default"
 {
 	xthickness = 2
 	ythickness = 1
+
+	bg[NORMAL]   = shade (1.07, @bg_color)
 
 	engine "clearlooks" {
 		hint = "treeview-header"
